Assignment2_Zhao_Duo/tests/automated/tests/bad/IdKeywordWithBadCharacters-12Chomped.calc
a% b%2 c%d e%f23 g%h24i r%ead j%kl w%rite m%no65p r%ead t%est